--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
-<h1>Welcome to {{title}}!</h1>
+<div class="container">
+  <div class="row">
+    <div class="column column">
+      <h1>{{title}}</h1>
+      <app-youtube-search></app-youtube-search>
+    </div>
+  </div>
+</div>
